test(core): cover persistence codec deprecation paths